GNU make NEWS                                               -*-indented-text-*-
  History of user-visible changes.
  Apr 12 2005

Copyright (C) 2002, 2004, 2005  Free Software Foundation, Inc.
See the end for copying conditions.

Please send remake bug reports to <rocky@panix.com>.
See the README file and the GNU remake manual for details on sending bug
reports.

Version 3.80+dbg-0.4cvs

* Add eval!

* Add ability to break before reading Makefiles - may be useful in 
  debugging macros and variables --debugger=preread. We can now trace
  makefile reading activity with -d r or via --trace = {read,full}

* The usual doc fixes after a release.

Version 3.80+dbg-0.3

* tracing adds GNU Make "basic" debugging. If debugging, then we also
  enter the debugger read loop. Hopefully this adds more granularity
  but not the diarrhea that "make -d" gives. To reduce this, "next"
  could be used to skip over remaking targets that don't have
  commands.

* print and examine now show origin status

* print/examine work for automatic variables. examine still has 
  problems with automatic variables in strings though.

* Allow abbreviations of debugger command attributes. As a result some
  attributes were renamed slighly, e.g. vars -> variables, deps ->
  depends, cmds -> commands. But note that since substrings are
  allowed, "command" and "com", and even "c" is the same as
  "commands".

* Make option --trace (-x) overrules using the --silent option and
  not echoing @ commands.

* "list" command renamed to "target". A future "list" command will 
  look more like gdb.

* fixed compilation issue(s) on systems that have readline, but do not
  have termcap.
	
* fixed failure of enter_debugger to exit on an empty line from
  readline.

* install program as remake by default (not make).

* misc bug fixes and compilations fixes for various OS's


Version 3.80+dbg-0.2

* Add ability to print specified attributes of a target, e.g. "time",
  "deps", "vars"...
